Add first app window for requests

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite",
+    "dev-debug": "vite --debug",
     "eslint": "eslint ."
   }
 }
